# cortex

./: .cursorrules  .gitattributes  .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CHANGELOG_v0.3.0_section.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONNECTING.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Modelfile.glm  PLAN.md  README.md  RECON.md  ROADMAP.md  SECURITY.md  SUPPORT.md  cliff.toml  cortex-app.bat  cortex-dashboard.bat  cortex-mcp.cmd  cortex-profiles.json  cortex-start.bat  dashboard-launch.bat  package-lock.json  package.json  run-dashboard.bat  start-daemon.bat  start-dashboard.bat
.claude-plugin/: marketplace.json
.cursor/rules/: 005-lean-ctx-shell.mdc
.github/workflows/: changelog.yml  ci.yml  release.yml  security-hygiene.yml
.planning/: config.json
Info/: codex-verification-report-v040.md  connecting.md  mcp-tools.md  plugin-lockstep.md  research.md  roadmap.md  security-rules.md  startup-matrix-troubleshooting.md  team-mode-setup.md
agent_ergonomics_audit/: README.md
agent_ergonomics_audit/audit/: HANDOFF.md  applied_changes.jsonl  manifest.json  phase0_cli.json  phase0_skill_inventory.json  playbook.md  recommendations.jsonl  scorecard.md  surface_inventory.jsonl
archive/v1-js/: brain.js  db.js  embeddings.js  profiles.js  run-tests.js
benchmark/: baseline-v041-benchmark.json  baseline-v041-metrics.json  baseline-v041.md  cleanup-duplicates.py  recall-benchmark-v2-results.json  recall-benchmark-v2.py  recall-metric-results.json  recall-metric.py
benchmarking/: README.md  benchmarks.lock.json  run_amb_cortex.py  setup-benchmarks.ps1
benchmarking/adapters/: README.md  cortex_amb_provider.py  cortex_function_adapter.py  cortex_http_base_provider.py  cortex_http_client.py  cortex_http_pure_provider.py  cortex_http_types.py
benchmarking/adversarial/: cas-100.jsonl  cas-100.spec.md
benchmarking/configs/: README.md  amb-eval-matrix.available.json  amb-eval-matrix.nonlongmem.detail-fidelity.quick.json  amb-eval-matrix.nonlongmem.expansion.fast.json  amb-eval-matrix.nonlongmem.expansion.full.json  amb-eval-matrix.nonlongmem.practical.json  amb-eval-matrix.nonlongmem.profile-delta.quick.json  amb-eval-matrix.nonlongmem.q10.json  amb-eval-matrix.nonlongmem.q5.json  amb-eval-matrix.phase2a-q5.json  amb-eval-matrix.stage1.json  amb-eval-matrix.stage1.q5.json  amb-eval-matrix.stage2.expanded.json  amb-eval-matrix.stage2.json  amb-eval-matrix.stage3.nonlongmem.json  cortex-amb.env.example  token-gate-baselines.json
benchmarking/judges/: triangle.py
benchmarking/results/: README.md  c3-budget-load-20260505-093316.json  c3-budget-load-20260505-093316.md  helper-benchmark-cortex-http-20260419.json  r2-boot-truncation-20260505-095450.json  r2-boot-truncation-20260505-095450.md  raw-recall-no-helper-dev-20260421-224217.json  rq1-embedding-profile-20260505-101100.json  (+1 more)
config/: Modelfile.deepseek  sources.toml.example
daemon-rs/: .gitignore  Cargo.toml
daemon-rs/.cargo/: audit.toml
daemon-rs/src/: admin.rs  aging.rs  api_types.rs  auth.rs  budgets.rs  co_occurrence.rs  compaction.rs  compiler.rs  conflict.rs  crystallize.rs  daemon_lifecycle.rs  db.rs  embeddings.rs  eval.rs  export_data.rs  focus.rs  hook_boot.rs  indexer.rs  logging.rs  main.rs  mcp_proxy.rs  mcp_stdio.rs  prompt_inject.rs  rate_limit.rs  rerank.rs  server.rs  service.rs  setup.rs  state.rs  tls.rs  transport.rs  workspace.rs
daemon-rs/src/handlers/: admin.rs  boot.rs  conductor.rs  diary.rs  events.rs  export.rs  feed.rs  feedback.rs  health.rs  mcp.rs  mod.rs  mutate.rs  recall.rs  store.rs
daemon-rs/tests/: adapter_conformance.rs  mcp_rpc_headers.rs  mcp_transport.rs  recall_benchmark.rs  smoke_test.sh
daemon-rs/tests/support/: mod.rs
desktop/cortex-control-center/src-tauri/: AUDIT_POLICY.md  Cargo.toml  audit-reviewed.ps1  build.rs  tauri.conf.json
desktop/cortex-control-center/src-tauri/capabilities/: default.json
desktop/cortex-control-center/src-tauri/icons/: icon.icns
desktop/cortex-control-center/src-tauri/src/: embedded_daemon.rs  main.rs  sidecar.rs
docs/: AI_CODING_TOOLS_RESEARCH.md  CLAUDE_OPUS_CORTEX_REVIEW.md  CODEX_CORTEX_JARVIS_REVIEW.md  CONNECTING.md  JARVIS_ARCHITECTURE_PROPOSAL.md  PHASE4_SPEC.md  Qwen_Review.md  ROADMAP-v3.md  ROADMAP.md  SECURITY-RULES.md  TODO.md  competitive-intel.md  model_delineation.md  qwen-bootstrap-prompt.md  team-mode-setup.md
scripts/: benchmark-triad.sh  check-plugin-lockstep.cjs  clean_install_smoke.sh  generate_readme_banner.py  generate_readme_monte_carlo.py  git-perf-health.ps1  migrate-v1.js  prune-build-bloat.ps1  release-smoke-test.sh
sdks/python/: pyproject.toml
sdks/python/cortex_memory/: __init__.py  client.py  types.py
sdks/python/tests/: test_client.py  test_conformance.py
specs/: 2026-05-09-cortex-brain-map-redesign-plan.md  2026-05-09-cortex-brain-map-redesign.md  2026-05-09-cortex-brain-v2-plan.md  2026-05-09-cortex-brain-v2-prd.md  cortex-adapter-contract.yaml  cortex-openapi.yaml
src/: brain.js  cli.js  compiler.js  conflict.js  daemon.js  db.js  embeddings.js  profiles.js
test/: conductor.test.js  cortex-critical.test.js  run-tests.js
tools/: audit_spawn_paths.py  ingest_chatgpt.py  sync-security-rules.sh  validate_chrome_extension_policy.py  validate_feature_intake.py
workers/: DASHBOARD.md  README.md  cortex_client.py  cortex_dash.py  cortex_dream.py  drift_detector.py  ingest_compressor.py
(+201 files in other folders)
