[package]
name = "cortex-daemon"
version = "2.1.0"
edition = "2021"
description = "Cortex memory daemon — standalone Rust binary"

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde", "clock"] }
futures-util = "0.3.31"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal", "io-std", "io-util"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = true
strip = true
