[package]
name = "cortex-daemon"
version = "0.2.0"
edition = "2021"
description = "Cortex memory daemon — standalone Rust binary"

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde", "clock"] }
futures-util = "0.3.31"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal", "io-std", "io-util"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
argon2 = "0.5"

# Embeddings (in-process ONNX)
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.16"
tokenizers = { version = "0.21", default-features = false, features = ["progressbar", "fancy-regex"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
dirs = "6"

# HTTP middleware
tower-http = { version = "0.6", features = ["cors"] }

# TLS (optional, for team/non-loopback deployments)
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Required for TLS connection serving (hyper-util is a transitive dep of axum)
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
tower = "0.5"

# Windows Service support
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
