[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-memory"
version = "0.5.0"
description = "Python SDK for the Cortex AI Memory daemon"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
dev = ["pytest", "pytest-httpx"]
