[package]
name = "cortex-control-center"
version = "0.2.0"
description = "Native desktop control center for Cortex"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde", "clock"] }
futures-util = "0.3.31"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
