[package]
name = "cortex-control-center"
version = "0.2.0"
description = "Native desktop control center for Cortex"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
